tests/snapshots/write_stdin_batch__write_stdin_timeout_polling_returns_pending_output.snap
---
source: tests/write_stdin_batch.rs
expression: snapshot.render()
---
== session: timeout_poll ==
-- step 1 --
call:
{
  "tool": "repl",
  "arguments": {
    "input": "cat(\"start\\n\"); flush.console(); Sys.sleep(1); cat(\"end\\n\")\n",
    "timeout_ms": 500
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> cat(\"start\\n\"); flush.console(); Sys.sleep(1); cat(\"end\\n\")\nstart"
    },
    {
      "type": "text",
      "text": "<<console status: busy, write_stdin timeout reached; elapsed_ms=N>>"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "repl",
  "arguments": {
    "input": "\n",
    "timeout_ms": 2000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "end"
    },
    {
      "type": "text",
      "text": "> "
    },
    {
      "type": "text",
      "text": "[mcp-console] input discarded while worker busy"
    }
  ]
}
