tests/snapshots/write_stdin_batch__write_stdin_timeout_polling_returns_pending_output@transcript.snap
---
source: tests/write_stdin_batch.rs
expression: snapshot.render_transcript()
---
== session: timeout_poll ==
1) repl timeout_ms=500
>>> cat("start\n"); flush.console(); Sys.sleep(1); cat("end\n")
<<< start
<<< <<console status: busy, write_stdin timeout reached; elapsed_ms=N>>

2) repl timeout_ms=2000
>>> 
<<< end
<<< [mcp-console] input discarded while worker busy
